Update printWidth in .prettierrc to 70

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "printWidth": 40,
+  "printWidth": 70,
   "jsxBracketSameLine": false,
   "jsxSingleQuote": false,
   "proseWrap": "preserve",
@@ -7,13 +7,5 @@
   "arrowParens": "always",
   "trailingComma": "all",
   "singleQuote": true,
-  "htmlWhitespaceSensitivity": "ignore",
-  "overrides": [
-    {
-      "files": "*.jsx",
-      "options": {
-        "printWidth": 30
-      }
-    }
-  ]
+  "htmlWhitespaceSensitivity": "ignore"
 }
